Fix: Overlap linea de tiempo + Mapa

--- a/public/css/linea-tiempo.css
+++ b/public/css/linea-tiempo.css
@@ -48,7 +48,7 @@
 }
 
 .img-linea-tiempo p.d {
-    top: 10%;
+    top: 5%;
     left: 30%;
 }
 
